# dxp

./: .env.example  .gitignore  CLAUDE.md  Makefile  ORCHESTRATOR_CONTEXT.md  README.md  dev.sh  pnpm-lock.yaml  screen-01-default-sg-overview.yml
apps/conversational-assistant/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  project.json  pyproject.toml  setup.sh
apps/conversational-assistant/configs/: ace-hardware.json  insurance-claims-advisor.json  insurance-claims.json  kb-assistant.json  meijer-retail.json  payer-member.json  wealth-investment-advisor.json
apps/conversational-assistant/configs/data/: ace-hardware.json  insurance-claims-advisor.json  kb-assistant.json  payer-claims.json  payer-providers.json  wealth-investment-advisor.json
apps/conversational-assistant/data/: meijer_products.json
apps/conversational-assistant/src/: config.py  main.py  observability.py
apps/conversational-assistant/src/agents/: framework.py  persona.py  react_tools.py  supervisor.py  tool_presenters.py
apps/conversational-assistant/src/agents/tools/: cart.py  domain_action.py  graph.py  kb.py  preferences.py  pricing.py  products.py  search.py  ucp_checkout.py
apps/conversational-assistant/src/api/: security.py
apps/conversational-assistant/src/db/: enrich_graph.py  graph.py  ingest.py  ingest_ace.py  init.sql  models.py  seed.py  session.py
apps/conversational-assistant/src/services/: readiness.py
apps/conversational-assistant/tests/: test_domain_action.py  test_ingest.py  test_tool_registry.py
context/: context.md
(+263 files in other folders)
