[project]
name = "agentic-commerce-api"
version = "0.1.0"
description = "Agentic Commerce POC - FastAPI Backend with LangGraph Agent Orchestration"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    # LLM & Agents
    "openai>=1.60.0",
    "langgraph>=0.2.60",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.30",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Observability
    "langfuse>=2.58.0",
    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "pypdf>=5.1.0",
    "pymupdf4llm>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
